[gd_scene load_steps=11 format=3 uid="uid://b7yd6jv6svhv1"]

[ext_resource type="Script" path="res://Scripts/choose_test.gd" id="1_urcdh"]
[ext_resource type="Texture2D" uid="uid://cugupoakjq8st" path="res://Sprites/button_outer_shadow.png" id="1_wluug"]
[ext_resource type="FontFile" uid="uid://b7ka8etnt22qj" path="res://Font/PTSansCaption-Regular.ttf" id="2_5gu0w"]
[ext_resource type="PackedScene" uid="uid://bufmtbiffs2a5" path="res://Scenes/test_button.tscn" id="3_vmh38"]
[ext_resource type="Texture2D" uid="uid://xsp2m5judq7k" path="res://Sprites/close.png" id="4_ebicm"]
[ext_resource type="Texture2D" uid="uid://bju2y56qh7a1p" path="res://Sprites/Gradient.png" id="4_f4s68"]
[ext_resource type="Texture2D" uid="uid://bsodv3g154ayd" path="res://Sprites/Gradient_2.png" id="4_nwa1q"]

[sub_resource type="Animation" id="Animation_hyqft"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Question_Tab:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_svaws"]
resource_name = "popup"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.239216, 0.239216, 0.239216, 0.501961)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Question_Tab:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(0.435275, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4tlvs"]
_data = {
"RESET": SubResource("Animation_hyqft"),
"popup": SubResource("Animation_svaws")
}

[node name="choose_test" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_urcdh")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = -5000.0
offset_top = -5000.0
offset_right = 5000.0
offset_bottom = 5000.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true

[node name="Question_Tab" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(250, 300)
texture = ExtResource("1_wluug")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="Question_Tab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Question_Tab/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Question_Tab/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.152941, 0.152941, 0.152941, 1)
theme_override_fonts/font = ExtResource("2_5gu0w")
theme_override_font_sizes/font_size = 35
text = "Выберете тест"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Question_Tab/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(440, 500)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 45)
layout_mode = 2
mouse_filter = 1

[node name="test_button" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 1"

[node name="test_button2" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 2"

[node name="test_button3" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 3"

[node name="test_button4" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 4"

[node name="test_button5" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 5"

[node name="test_button6" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 6"

[node name="test_button7" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 7"

[node name="test_button8" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 8"

[node name="test_button9" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 9"

[node name="test_button10" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 10"

[node name="test_button11" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 11"

[node name="test_button12" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 12"

[node name="test_button13" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 13"

[node name="test_button14" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 14"

[node name="test_button15" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_vmh38")]
layout_mode = 2
mouse_filter = 1
nickname = "Тест 15"

[node name="Control2" type="Control" parent="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 45)
layout_mode = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Question_Tab/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 50

[node name="TextureRect2" type="TextureRect" parent="Question_Tab/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("4_nwa1q")

[node name="TextureRect" type="TextureRect" parent="Question_Tab/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("4_f4s68")

[node name="MarginContainer2" type="MarginContainer" parent="Question_Tab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18

[node name="close" type="Button" parent="Question_Tab/MarginContainer2"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
flat = true

[node name="TextureRect" type="TextureRect" parent="Question_Tab/MarginContainer2/close"]
modulate = Color(0, 0, 0, 0.392157)
custom_minimum_size = Vector2(36, 36)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -13.0
offset_right = 13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(18, 18)
mouse_filter = 2
texture = ExtResource("4_ebicm")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4tlvs")
}

[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button" to="." method="_on_test_button_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button2" to="." method="_on_test_button_2_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button3" to="." method="_on_test_button_3_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button4" to="." method="_on_test_button_4_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button5" to="." method="_on_test_button_5_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button6" to="." method="_on_test_button_6_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button7" to="." method="_on_test_button_7_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button8" to="." method="_on_test_button_8_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button9" to="." method="_on_test_button_9_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button10" to="." method="_on_test_button_10_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button11" to="." method="_on_test_button_11_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button12" to="." method="_on_test_button_12_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button13" to="." method="_on_test_button_13_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button14" to="." method="_on_test_button_14_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/test_button15" to="." method="_on_test_button_15_pressed"]
[connection signal="pressed" from="Question_Tab/MarginContainer2/close" to="." method="_on_close_pressed"]
